--- a/index.html
+++ b/index.html
@@ -1,62 +1,54 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Hdhomerun : Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)" />
 
-  <title>Hdhomerun</title>
-  <meta name="description" content="Scan for device, create *.strm files from available channels into ~\Videos/Live TV/ Simple single bash script">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Hdhomerun</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/JB19/HDHomeRun">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Hdhomerun</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Scan for device, create *.strm files from available channels into ~\Videos/Live TV/ Simple single bash script</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/JB19/HDHomeRun/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/JB19/HDHomeRun/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/JB19/HDHomeRun" class="code">View Hdhomerun on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p>Simple Script written in bash to parse hdhomerun_config scan into streaming files for use with XBMC.</p>
-        </article>
-      </div>
+          <h1 id="project_title">Hdhomerun</h1>
+          <h2 id="project_tagline">Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/JB19/HDHomeRun/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/JB19/HDHomeRun/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/JB19" class="avatar"><img src="https://secure.gravatar.com/avatar/4457880bf9d2a05769727310f4cceb0a?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/JB19">JB19</a> maintains <a href="https://github.com/JB19/HDHomeRun">Hdhomerun</a></p>
 
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>Once you have installed hdhomerun_config, instructions here:<a href="http://www.silicondust.com/support/hdhomerun/downloads/linux/">Linux HDHomeRun installation guide</a>, download the hdhomerun.sh script and run it.  You may have to add execute permissions with <code>chmod +x</code>.  Use <code>tar -zxvf {file.tar.gz}</code> To extract the script.
+On the rare occasion it may require to be run twice (if nothing shows up in your Live TV folder the first time).</p>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/JB19/HDHomeRun/tarball/master" class="tar">tar</a><a href="https://github.com/JB19/HDHomeRun/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+<p>Afterwards add <code>~/Videos/Live TV</code> to your video file in XBMC.</p>
 
-  
-</body>
+<p>You should now be able to stream individual channels via XBMC by opening Videos&gt;Live TV&gt;'Your Channel'</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Hdhomerun maintained by <a href="https://github.com/JB19">JB19</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
