Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Hdhomerun : Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)" />
 
-  <title>Hdhomerun</title>
-  <meta name="description" content="Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Hdhomerun</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/JoshBulger/HDHomeRun">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Hdhomerun</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/JoshBulger/HDHomeRun/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/JoshBulger/HDHomeRun/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/JoshBulger/HDHomeRun" class="code">View Hdhomerun on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>Info:</h1>
+          <h1 id="project_title">Hdhomerun</h1>
+          <h2 id="project_tagline">Simple bash script to scan your HDHomeRun and create strm files for use with XBMC (intended for use with Linux)</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/JoshBulger/HDHomeRun/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/JoshBulger/HDHomeRun/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>Info:</h1>
 
 <p>This project takes advantage of hdhomerun_config and then parses the scanned data from tuner1 into stream files to be used with XBMC.  This script is intended to only work with a single device.  As always, use code found on the internet at your own risk.  That being said you are more than welcome to download and view the code using your favorite editor.</p>
 
@@ -46,9 +41,9 @@
 
 <p>Change to the directory downloaded to:<br><code>$ cd ~/Downloads/</code></p>
 
-<p>Extract the tar.gz<br><code>$ tar -zxvf joshbulger-HDHomeRun-dfdc052.tar.gz</code></p>
+<p>Extract the tar.gz<br><code>$ tar -zxvf JoshBulger-HDHomeRun-dfdc052.tar.gz</code></p>
 
-<p>Go into the extracted directory<br><code>$ cd joshbulger-HDHomeRun-dfdc052</code></p>
+<p>Go into the extracted directory<br><code>$ cd JoshBulger-HDHomeRun-dfdc052</code></p>
 
 <p>Run the script.<br><code>$ ./homeruntv.sh</code></p>
 
@@ -61,26 +56,18 @@
 <p>You should now be able to stream individual channels via XBMC by opening Videos&gt;Live TV&gt;'Your Channel'</p>
 
 <p>*note that you are required to have XBMC installed to view the streams within XBMC.</p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/JoshBulger" class="avatar"><img src="https://secure.gravatar.com/avatar/4457880bf9d2a05769727310f4cceb0a?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/JoshBulger">JoshBulger</a> maintains <a href="https://github.com/JoshBulger/HDHomeRun">Hdhomerun</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Hdhomerun maintained by <a href="https://github.com/JoshBulger">JoshBulger</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/JoshBulger/HDHomeRun/tarball/master" class="tar">tar</a><a href="https://github.com/JoshBulger/HDHomeRun/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
